--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+dist: xenial
 python:
 - 3.7
 
@@ -7,6 +8,7 @@ before_install:
 
 install:
 - poetry install
+- poetry --version
 
 script:
 # - echo Skipping tests
@@ -23,6 +25,9 @@ deploy:
   skip_cleanup: true
   on:
     tags: true
+
+notifications:
+  email: false
 
 env:
   global:
